# GeTimeResImprovement

./: .gitignore  Data 1 - Main - Andrei.ipynb  Data 2 - Main - Andrei.ipynb  LICENSE  README.md  Tutorial.ipynb  Waveforms ML V4 - Martin.ipynb  functions.py  performance_testing.ipynb  pyproject.toml  waveform_fitting.ipynb
data/models/: model6.71.pkl  model6.80.pkl  reasonable_mixed_model.keras
data/results/: NN_PCA_TruncSVC_testing_gBOTHpartfltr_4000-11250.csv  PCA_alpha_testing_21-64_th06.csv  PCA_testing_14-32_th06.csv  PCA_testing_19-64_th06.csv  PCA_testing_2-128_th60.csv  PCA_testing_32-64_th06.csv  PCA_testing_g1274_4000-5000.csv  PCA_testing_g511_10350-14000.csv  PCA_testing_g511_11050-11250.csv  PCA_testing_g511unfiltered_11050-11250.csv  PCA_testing_gBOTH_4000-11250.csv  PCA_testing_gBOTHunfiltered_4000-11250.csv  XGBoost2_g511unfiltered_10350-14000.csv  XGBoost_PCA_testing_gBOTHpartfltr_4000-11250.csv  XGBoost_g511unfiltered_10350-14000.csv  XGBoost_gBOTHunfiltered_4000-11250.csv  results_df_with_fits.parquet  results_df_with_fits_exp.parquet
gewapro/: __init__.py  cache.py  experiment_flow.py  functions.py  models.py  plots.py  preprocessing.py  util.py
gewapro/plotting/: __init__.py  base.py  old.py  plotting.py
