[project]
name = "GeWaPro"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thomas Dam", email = "t.y.a.dam@student.rug.nl" },
]
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "cufflinks (>=0.17.3,<0.18.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "ipython (>=9.1.0,<10.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "xgboost (>=3.0.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"