[project]
name = "GeWaPro"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thomas Dam", email = "t.y.a.dam@student.rug.nl" },
]
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==1.26.2)",
    "plotly (>=5.0.1,<6.0.0)",
    "cufflinks (>=0.17.3,<0.18.0)",
    "scipy (==1.11.4)",
    "cloudpickle (==3.0.0)",
    "psutil (==5.9.6)",
    "scikit-learn (==1.4.1.post1)",
    "mlflow (==2.17.1)",
    "ipython (>=9.1.0,<10.0.0)",
    "notebook (>=7.0.6,<7.4.1)",
    "xgboost (>=3.0.0,<4.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "keras (>=3.9.2,<4.0.0)",
    "tensorflow (>=2.17.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"